# medre

./: .bandit.yaml  .coderabbit.yml  .coveragerc  .gitignore  AGENTS.md  LICENSE  README.md  codecov.yml  coderabbit_actionable_items.md  docker-compose.integration.yaml  pyproject.toml  renovate.json
.github/workflows/: docker-integration.yml  test-and-coverage.yml
.trunk/: trunk  trunk.yaml
.trunk/configs/: .bandit.yaml
docs/: ARCHITECTURE_PLAN.md  STATUS.md
docs/architecture/: adapter-ingress-audit.md  adapter-reuse.md  alpha-readiness-gaps.md  cli-command-contributions.md  module-boundaries.md  operator-command-surface.md  operator-tooling-boundary.md  storage-query-audit.md  transport-validation-matrix.md
docs/changes/: README.md  unreleased.md
docs/contracts/: 01-canonical-event-contract.md  02-adapter-runtime-contract.md  03-storage-contract.md  04-routing-planning-contract.md  05-plugin-api-contract.md  06-metadata-embedding-contract.md  07-replay-event-log-contract.md  08-matrix-tranche-1.md  09-meshtastic-tranche-1.md  10-meshtastic-source-audit.md  11-meshtastic-connection-boundary.md  12-adapter-platform-identity.md  12-constrained-transport-comparison.md  13-lxmf-source-audit.md  14-lxmf-tranche-1.md  15-adapter-baseline-consolidation.md  16-production-connectivity-readiness.md  17-event-lineage-debugging.md  18-operational-readiness-gaps.md  19-meshcore-connectivity-readiness.md  20-lxmf-connectivity-readiness.md  21-adapter-operational-contract.md  22-delivery-semantics-matrix.md  23-identity-and-addressing.md  24-production-connectivity-roadmap.md  25-matrix-e2ee-readiness.md  26-metadata-normalization-audit.md  27-diagnostics-consistency-audit.md  28-alpha-readiness-report.md  29-diagnostics-contract.md  30-delivery-result-contract.md  31-session-boundary-contract.md  32-beta-readiness-checklist.md  33-failure-taxonomy.md  34-dependency-reality-audit.md  35-resource-containment-review.md  36-radio-limitations.md  37-transport-maturity-classification.md  38-release-candidate-criteria.md  38-release-hygiene-audit.md  (+31 more)
docs/dev/: README.md  TESTING_GUIDE.md  adapter-authoring.md  adapter-lifecycle-audit.md  adapter-reality-audit.md  boundary-hardening-audit.md  capability-truth-audit.md  change-process.md  config-schema-authority-audit.md  live-test-harness.md  (+28 more)
scripts/: live-matrix-meshtastic-smoke.sh
tests/: _retry_test_helpers.py  conftest.py  test_adapter_boundary.py  test_adapter_callback_bridge.py  test_adapter_config_round_trip.py  test_adapter_conformance.py  test_adapter_health.py  test_adapter_kind_validity.py  test_adapter_lifecycle_registry.py  test_adapter_matrix_auth_cli.py  test_adapter_parity.py  test_adapter_post_stop_ingress.py  test_adapter_reuse_examples.py  test_adapter_reuse_imports.py  test_adapter_status_evidence.py  test_alpha_cli_config_and_smoke.py  test_alpha_cli_error_paths.py  test_alpha_cli_inspect_flow.py  test_alpha_cli_replay_flow.py  test_alpha_walkthrough.py  test_alpha_walkthrough_cli.py  test_alpha_walkthrough_runtime_retry_replay.py  test_app_typechecking.py  test_architectural_boundaries.py  test_architecture_adapter_reuse.py  test_architecture_convergence.py  test_architecture_dependency_report.py  test_architecture_docs_boundaries.py  test_architecture_dynamic_assembly.py  test_architecture_import_boundaries.py  test_architecture_import_io.py  test_architecture_import_side_effects.py  test_architecture_lifecycle_convergence.py  test_architecture_public_api.py  test_architecture_recovery.py  test_beta_scope_boundaries.py  test_bidirectional_bridge_safety.py  test_boundary_api.py  test_boundary_engine.py  test_boundary_hardening.py  (+524 more)
(+562 files in other folders)
