[project]
name = "medre"
version = "0.1.0"
description = "Modular event communications runtime"
requires-python = ">=3.11"
dependencies = ["msgspec==0.21.1"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
matrix = [
    "mindroom-nio>=0.25",
]
meshtastic = [
    "mtjk",
]
meshcore = [
    "meshcore",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: tests that connect to a real service or hardware (skipped by default)",
]
addopts = "-m 'not live'"
